# marketplace-scraper

./: .env.example  .gitignore  .pylintrc  Dockerfile  PyWhatKit_DB.txt  README.md  crontab  docker-compose.example.yaml  docker-compose.yaml  driver.py  email.py  email_driver.py  keywords.example.py  keywords.py  last_listing.txt  main.py  matched_listings.py  pyproject.toml  requirements.txt  run.py  scraper.py  script.sh  supervisord.conf  utils.py  web_driver.py
config/: crontab  keywords.example.py
marketplace_scraper/: __init__.py  __main__.py  discord_driver.py  email_driver.py  main.py  matched_listings.py  scraper.py  utils.py  web_driver.py
templates/: matched_listings.html
webserver/: __init__.py  routes.py
webserver/templates/: index.html  keywords_list.html
