[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketplace_scraper"
version = "0.1.0"
authors = [{ name = "ivan", email = "ivan@ivan.com" }]
description = "A web scraper for marketplace listings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium==4.12.0",
    "python-dotenv==1.0.1",
    "yagmail==0.15.293",
    "jinja2==3.1.5",
    "flask==3.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["marketplace_scraper"]
